removed bootstrap dependency

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="fixed-header">
   <mat-toolbar-row>
     <span>
-      <img src="./assets/logo.jpg" alt="not found" style="width:50px;">
+      <mat-icon>home</mat-icon>
     </span>
     <a mat-button routerLink="/view-bill" routerLinkActive="active-link" >View Bill</a>
     <a mat-button routerLink="/customer-panel" routerLinkActive="active-link">Customer Panel</a>
