--- a/src/app/single-product/single-product.component.html
+++ b/src/app/single-product/single-product.component.html
@@ -78,7 +78,7 @@
         <!-- #endregion -->
 
         <!-- #region Button: delete -->
-        <button class="m-5" mat-icon-button type="button">
+        <button  mat-icon-button type="button">
           <mat-icon>delete</mat-icon>
         </button>
         <!-- #endregion -->
