--- a/src/app/core/single-product/single-product.component.html
+++ b/src/app/core/single-product/single-product.component.html
@@ -1,95 +1,95 @@
 <!-- #region Form : single product -->
-<form [formGroup]="singleProductForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="singleProductForm" class="flex" (ngSubmit)="onSubmit()">
+
   <!-- #region Card -->
   <mat-card>
-    <!-- #region Card: content -->
-    <mat-card-content>
-      <!-- #region Grid List: Form fields -->
-      <mat-grid-list cols="6">
-        <!-- #region Form Prefix: SL.NO  -->
-        <span matPrefix>{{slNo}}. </span>
-        <!-- #endregion -->
 
-        <!-- #region Form Field: Description -->
-        <mat-form-field>
-          <input matInput placeholder="Description" formControlName="description" [(ngModel)]="product.description"
-            [matAutocomplete]="autoCompleteForDescription">
-          <mat-error *ngIf="singleProductForm.controls['description'].hasError('required')">
-            Description is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
-        <!-- #region Form Field: AutoComplete Options -->
-        <mat-autocomplete #autoCompleteForDescription="matAutocomplete">
-          <mat-option *ngFor="let description of descriptions" [value]="description">
-            {{ description }}
-          </mat-option>
-        </mat-autocomplete>
-        <!-- #endregion -->
-        <!-- #endregion -->
+    <!-- #region Grid List: Form fields -->
+    <mat-grid-list cols="6">
 
-        <!-- #region Form Field: HSN -->
-        <mat-form-field>
-          <input matInput placeholder="HSN" formControlName="hsn" [(ngModel)]="product.hsn" [(ngModel)]="product.hsn">
-          <mat-error *ngIf="singleProductForm.controls['hsn'].hasError('required')">
-            HSN is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
-        <!-- #endregion -->
-
-        <!-- #region Form Field: Quantity -->
-        <mat-form-field>
-          <input matInput placeholder="Quantity" type="number" min="0" formControlName="quantity"
-            [(ngModel)]="product.quantity">
-          <mat-error *ngIf="singleProductForm.controls['quantity'].hasError('required')">
-            Quantity is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
-        <!-- #endregion -->
-
-        <!-- #region Form Field: GST Percentage -->
-        <mat-form-field>
-          <mat-select placeholder="GST Percentage" formControlName="gstPercentage" [(ngModel)]="product.gstPercentage">
-            <mat-option *ngFor="let gstPercentage of gstPercentages" [value]="gstPercentage">
-              {{ gstPercentage }}
-            </mat-option>
-          </mat-select>
-          <mat-error *ngIf="singleProductForm.controls['gstPercentage'].hasError('required')">
-            GST Percentage is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
-        <!-- #endregion -->
-
-        <!-- #region Form Field: Rate -->
-        <mat-form-field>
-          <input matInput placeholder="Rate" type="number" min="0" formControlName="rate" [(ngModel)]="product.rate">
-          <mat-error *ngIf="singleProductForm.controls['rate'].hasError('required')">
-            Rate is <strong>required</strong>
-          </mat-error>
-          <span matSuffix>$&nbsp;</span>
-        </mat-form-field>
-        <!-- #endregion -->
-
-        <!-- #region Form Field: Discount -->
-        <mat-form-field>
-          <input matInput placeholder="Discount" type="number" min="0" max="100" formControlName="discount"
-            [(ngModel)]="product.discount">
-          <span matSuffix>%&nbsp;</span>
-        </mat-form-field>
-        <!-- #endregion -->
-
-        <!-- #region Button: delete -->
-        <button  mat-icon-button type="button">
-          <mat-icon>delete</mat-icon>
-        </button>
-        <!-- #endregion -->
-
-        <!-- #region Form Field: CheckBox -->
-        <mat-checkbox formControlName="checkBox">
-        </mat-checkbox>
-        <!-- #endregion -->
-      </mat-grid-list>
+      <!-- #region Form Prefix: SL.NO  -->
+      <span matPrefix>{{slNo}}. </span>
       <!-- #endregion -->
-    </mat-card-content>
+
+      <!-- #region Form Field: Description -->
+      <mat-form-field>
+        <input matInput placeholder="Description" formControlName="description" [(ngModel)]="product.description"
+          [matAutocomplete]="autoCompleteForDescription">
+        <mat-error *ngIf="singleProductForm.controls['description'].hasError('required')">
+          Description is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <!-- #region Form Field: AutoComplete Options -->
+      <mat-autocomplete #autoCompleteForDescription="matAutocomplete">
+        <mat-option *ngFor="let description of descriptions" [value]="description">
+          {{ description }}
+        </mat-option>
+      </mat-autocomplete>
+      <!-- #endregion -->
+      <!-- #endregion -->
+
+      <!-- #region Form Field: HSN -->
+      <mat-form-field>
+        <input matInput placeholder="HSN" formControlName="hsn" [(ngModel)]="product.hsn" [(ngModel)]="product.hsn">
+        <mat-error *ngIf="singleProductForm.controls['hsn'].hasError('required')">
+          HSN is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <!-- #endregion -->
+
+      <!-- #region Form Field: Quantity -->
+      <mat-form-field>
+        <input matInput placeholder="Quantity" type="number" min="0" formControlName="quantity"
+          [(ngModel)]="product.quantity">
+        <mat-error *ngIf="singleProductForm.controls['quantity'].hasError('required')">
+          Quantity is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <!-- #endregion -->
+
+      <!-- #region Form Field: GST Percentage -->
+      <mat-form-field>
+        <mat-select placeholder="GST Percentage" formControlName="gstPercentage" [(ngModel)]="product.gstPercentage">
+          <mat-option *ngFor="let gstPercentage of gstPercentages" [value]="gstPercentage">
+            {{ gstPercentage }}
+          </mat-option>
+        </mat-select>
+        <mat-error *ngIf="singleProductForm.controls['gstPercentage'].hasError('required')">
+          GST Percentage is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <!-- #endregion -->
+
+      <!-- #region Form Field: Rate -->
+      <mat-form-field>
+        <input matInput placeholder="Rate" type="number" min="0" formControlName="rate" [(ngModel)]="product.rate">
+        <mat-error *ngIf="singleProductForm.controls['rate'].hasError('required')">
+          Rate is <strong>required</strong>
+        </mat-error>
+        <span matSuffix>$&nbsp;</span>
+      </mat-form-field>
+      <!-- #endregion -->
+
+      <!-- #region Form Field: Discount -->
+      <mat-form-field>
+        <input matInput placeholder="Discount" type="number" min="0" max="100" formControlName="discount"
+          [(ngModel)]="product.discount">
+        <span matSuffix>%&nbsp;</span>
+      </mat-form-field>
+      <!-- #endregion -->
+
+      <!-- #region Button: delete -->
+      <button mat-icon-button type="button">
+        <mat-icon>delete</mat-icon>
+      </button>
+      <!-- #endregion -->
+
+      <!-- #region Form Field: CheckBox -->
+      <mat-checkbox formControlName="checkBox">
+      </mat-checkbox>
+      <!-- #endregion -->
+
+    </mat-grid-list>
     <!-- #endregion -->
   </mat-card>
   <!-- #endregion -->
