--- a/src/app/core/single-product/single-product.component.html
+++ b/src/app/core/single-product/single-product.component.html
@@ -76,7 +76,7 @@
       <!-- #region Form Field: Discount -->
       <mat-form-field>
         <input matInput placeholder="Discount" type="number" min="0" max="100" formControlName="discount"
-          [(ngModel)]="product.discount" required>
+          [(ngModel)]="product.discount">
         <span matSuffix>%&nbsp;</span>
       </mat-form-field>
       <!-- #endregion -->
