--- a/src/app/componets/new-bill/new-bill.component.html
+++ b/src/app/componets/new-bill/new-bill.component.html
@@ -1,33 +1,34 @@
 <!-- #region new bill div-->
 <div class="new-bill">
 
-  <!-- #region top layout -->
-  <mat-grid-list cols="2" rowHeight="75">
-
-    <!-- #region customer name and total amount -->
-    <mat-grid-tile>
-      <div>
-        <p>Customer Name : <strong>{{customerName}}</strong></p>
-        <p>Total Amount : <strong>{{totalAmount}}</strong></p>
-      </div>
-    </mat-grid-tile>
-    <!-- #endregion -->
-
-    <!-- #region date picker -->
-    <mat-grid-tile>
-      <mat-form-field>
-        <input matInput [matDatepicker]="manualDatePicker" placeholder="Manual Date">
-        <mat-datepicker-toggle matSuffix [for]="manualDatePicker"></mat-datepicker-toggle>
-        <mat-datepicker #manualDatePicker></mat-datepicker>
-      </mat-form-field>
-    </mat-grid-tile>
-    <!-- #endregion -->
-
-  </mat-grid-list>
-  <!-- #endregion -->
-
   <!-- #region middle layout -->
   <mat-card class="main-container">
+    <!-- #region top layout -->
+    <mat-grid-list cols="2" rowHeight="75px">
+
+      <!-- #region customer name and total amount -->
+      <mat-grid-tile>
+        <div>
+          <p>Customer Name : <strong>{{customerName}}</strong></p>
+          <p>Total Amount : <strong>{{totalAmount}}</strong></p>
+        </div>
+      </mat-grid-tile>
+      <!-- #endregion -->
+
+      <!-- #region date picker -->
+      <mat-grid-tile>
+        <mat-form-field>
+          <input matInput [matDatepicker]="manualDatePicker" placeholder="Manual Date">
+          <mat-datepicker-toggle matSuffix [for]="manualDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #manualDatePicker></mat-datepicker>
+        </mat-form-field>
+      </mat-grid-tile>
+      <!-- #endregion -->
+
+    </mat-grid-list>
+    <!-- #endregion -->
+
+    <mat-divider></mat-divider>
 
     <!-- #region add and delete buttons -->
     <mat-card-actions class="action-buttons">
@@ -38,6 +39,10 @@
       <button mat-icon-button [matTooltip]="getDeleteSelectedProductButtonTooltip()" [matBadge]="getSelectedCount()"
         matBadgeSize="small" [disabled]="isDeleteButtonDisable()" (click)="onClickOfOverallDeleteButton();">
         <mat-icon>delete</mat-icon>
+      </button>
+      <button mat-icon-button [matTooltip]="getDeleteSelectedProductButtonTooltip()"
+        [disabled]="isSubmitAndSelectAllButtonDisable()" (click)="onClickOfSelectButton();">
+        <mat-icon>select_all</mat-icon>
       </button>
     </mat-card-actions>
     <!-- #endregion -->
