--- a/src/app/componets/new-bill/new-bill.component.css
+++ b/src/app/componets/new-bill/new-bill.component.css
@@ -19,6 +19,8 @@
 
 .submit-button {
   text-align: right;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .new-bill {
@@ -27,4 +29,9 @@
 
 .scroll-viewport {
   height: 400px;
+}
+
+.mat-error {
+  margin: 10px;
+  text-align: center;
 }
