--- a/src/app/core/single-product/single-product.component.css
+++ b/src/app/core/single-product/single-product.component.css
@@ -13,3 +13,9 @@ form {
   width: -webkit-fill-available;
   align-self: center;
 }
+mat-card {
+  padding: 0px;
+  padding-left: 4px;
+  padding-right: 4px;
+
+}
