--- a/src/app/app-main-nav/app-main-nav.component.html
+++ b/src/app/app-main-nav/app-main-nav.component.html
@@ -1,20 +1,12 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport="false" [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>Billing System</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<mat-toolbar color="primary" class="fixed-header">
+  <mat-toolbar-row>
+    <span>
+      <mat-icon>home</mat-icon>
+    </span>
+    <a mat-button routerLink="/view-bill" routerLinkActive="active-link" >View Bill</a>
+    <a mat-button routerLink="/customer-panel" routerLinkActive="active-link">Customer Panel</a>
+    <a mat-button routerLink="/user-panel" routerLinkActive="active-link">User Panel</a>
+    <a mat-button routerLink="/new-bill" routerLinkActive="active-link">New Bill</a>
+
+  </mat-toolbar-row>
+</mat-toolbar>
