--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,4 @@
-<mat-toolbar color="primary" class="fixed-header">
-  <mat-toolbar-row>
-    <span>
-      <mat-icon>home</mat-icon>
-    </span>
-    <a mat-button routerLink="/view-bill" routerLinkActive="active-link" >View Bill</a>
-    <a mat-button routerLink="/customer-panel" routerLinkActive="active-link">Customer Panel</a>
-    <a mat-button routerLink="/user-create" routerLinkActive="active-link">User Panel</a>
-    <a mat-button routerLink="/new-bill" routerLinkActive="active-link">New Bill</a>
-
-  </mat-toolbar-row>
-</mat-toolbar>
+<app-main-nav></app-main-nav>
 <main>
   <router-outlet style="margin-top: 80px;"></router-outlet>
 </main>
